scroll jump fix test 8 - Issue safari address bar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,3 +17,8 @@
 .hide-scrollbar::-webkit-scrollbar {
   display: none;  /* Chrome, Safari and Opera */
 }
+
+/* Add this one line */
+:root {
+  --vh: 1vh;
+}
